# ggtool

./: .gitignore  Cargo.toml  LICENSE  README.md  binary_reader_extensions.rs  format_notes.txt  main.rs  yack_notes.txt
.github/workflows/: release.yml
ggtool/: Cargo.toml
ggtool/src/: main.rs
libdinky/: Cargo.toml  README.md  build.rs  formats.hsl  yack_format.txt
libdinky/src/: dink.rs  directory.rs  easy_br.rs  ggpack.rs  ktx_decompressor.rs  lib.rs  yack.rs
libdinky/src/ktx_decompress/: decompress_gl.rs  mod.rs
src/: decoder.rs  dink.rs  directory.rs  easy_br.rs  ggpack.rs  keys.rs  main.rs  reader.rs  yack.rs
src/reader/: decoder.rs
