[package]
name = "ggtool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "3.2.22", features = ["derive"] }
serde_json = "1.0.85"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "ggtool"
path = "src/main.rs"
