[package]
name = "libdinky"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
gl_generator = "0.14.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.85"
serde = { version = "1.0", features = ["derive"] }
inflate = "0.4.5"
byteorder = "1.4.3"
ktx = "0.3.2"
png = "0.17.6"
surfman = "0.4.3"
