[package]
name = "libdinky"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jonsth131/ggtool"
keywords = ["ggpack", "Return to Monkey Island", "yack", "dinky", "wimpy"]

[build-dependencies]
gl_generator = { version = "0.14.0", optional = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.85"
serde = { version = "1.0", features = ["derive"] }
inflate = "0.4.5"
byteorder = "1.4.3"
ktx = {version = "0.3.2", optional = true }
png = { version = "0.17.6", optional = true}
surfman = { version = "0.4.3", optional = true }
wax = "0.5.0"

[features]
decompress_ktx = ["surfman", "png", "ktx", "gl_generator"]
