[package]
name = "libdinky"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jonsth131/ggtool"
keywords = ["ggpack", "Return to Monkey Island", "yack", "dinky", "wimpy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.85"
serde = { version = "1.0", features = ["derive"] }
inflate = "0.4.5"
byteorder = "1.4.3"
ktx = {version = "0.3.2", optional = true }
png = { version = "0.17.6", optional = true}
wax = "0.5.0"
glfw = { version = "0.47.0",  optional = true }
glow = { version = "0.11", optional = true }

[features]
decompress_ktx = ["glfw", "png", "ktx", "glow"]
